public/index.css
:root {
  --light-gray: #ddd;
  --gray: #999;
}

@font-face {
  font-family: "Inter";
  src: url("./Inter-VariableFont_slnt,wght.ttf");
}

html, body {
  min-height: 100vh;
  scroll-behavior: smooth;
}

body {
  display: flex;
  flex-direction: column;
  font-family: "Inter", sans-serif;
  margin: 0;
  overflow-x: hidden;
}

/*
  Components
 */

a {
  text-decoration: none;
}

.button {
  border: 2px solid var(--light-gray);
  border-radius: 1.5em;
  padding: .6rem 1.1rem;
  transition: background-color .3s;
}

.button:hover {
  background-color: var(--light-gray);
}

/*
  Header
 */

header {
  display: flex;
  justify-content: space-between;
  padding: 2rem 10vw;
  z-index: 1;
}

header ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

header li {
  display: inline-block;
  margin: 0.75rem 1rem;
}

header a {
  color: var(--gray);
  transition: color .2s;
}

header a:hover {
  color: #333;
}

/*
  Login button
 */

.login {
  background-color: #3772ff;
  border-color: #3772ff;
  color: #fff !important;
}

.login:hover {
  background-color: #2956c5;
  color: #fff;
}

/*
  Footer
 */

footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 1rem 0;
}

footer h1 {
  font-size: 1.5rem;
}

footer p {
  color: var(--gray);
  font-size: .75rem;
}

hr {
  width: 80%;
  background-color: var(--light-gray);
  border: none;
  height: 1px;
}

/*
  Middle stuff
 */

main {
  flex-grow: 1;
}

/*
  First slide
 */

#intro {
  display: flex;
  min-height: calc(120vh - 6rem);
  align-items: center;
  overflow: hidden;
  position: relative;
}

#intro > div, #plan > div {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 0 5vw 0 10vw;
}

#intro > div {
  position: absolute;
  top: 30vh;
}

#intro h1 {
  font-size: 3rem;
  margin: 0;
  max-width: 30vw;
}

#intro h2 {
  color: var(--gray);
  font-size: 1rem;
  margin: 0;
  text-transform: uppercase;
}

#intro h3 {
  color: var(--gray);
  font-weight: normal;
  font-size: 1rem;
}

#intro img, #plan img {
  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
  border-radius: 20px 0 0 20px;
}

#intro img {
  position: absolute;
  left: 42%;
  top: 10%;
  z-index: 0;
  max-height: 90vh;
}

button {
  appearance: none;
  background: none;
  border: none;
  outline: none;
  font-weight: bold;
  font-size: 1.1rem;
  margin: 1rem 0;
}

.buttons a {
  color: #000;
}

#menu {
  display: none;
}

#menu img {
  border-radius: 50%;
  height: 1.5rem;
  padding: .75rem;
  position: absolute;
  top: 1.5rem;
  right: calc(10vw - .75rem);
  transition: background-color .2s;
}

#menu img:hover {
  background-color: var(--light-gray);
}

@media screen and (max-width: 1200px) {
  /*
    Vertically align the image
   */
  #intro {
    flex-direction: column;
  }

  #intro h1 {
    font-size: 2.5rem;
    max-width: 300px;
  }

  #intro > div {
    position: static;
    padding: 10vh 10vw;
  }

  #intro img {
    position: static;
    max-width: 90vw;
    border-radius: 20px;
    margin-bottom: 2rem;
  }
}

@media screen and (max-width: 900px) {
  header ul {
    display: none;
  }

  #menu {
    display: block;
  }
}

@media screen and (max-width: 650px) {
  /*
    Detach the image
   */
  #intro > div {
    flex-grow: 0;
  }

  #intro img {
    width: 150vw;
  }
}

/*
  Second slide
 */

section:nth-child(odd) {
  background-color: #f4f5f6;
}

#features, #team, #contact, #plan {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  min-height: calc(100vh - 4rem);
  padding: 2rem 0;
  text-align: center;
}

#features h2, #team h2, #contact h2, #plan h2 {
  font-size: 3rem;
  margin: 0;
}

#features h3 {
  color: var(--gray);
  font-weight: normal;
  width: 30%;
}

.features {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 10vw;
  padding: 15vh 10vw;
}

.feature {
  align-items: center;
  display: flex;
  flex-direction: column;
}

.feature div {
  background-color: #eee;
  border-radius: 100%;
}

.feature img {
  height: 4rem;
  padding: .5rem .6rem;
}

.feature p {
  color: var(--gray);
  margin: 0;
  line-height: 1.5rem;
}

@media screen and (max-width: 1200px) {
  #features h2, #team h2, #contact h2, #plan h2 {
    font-size: 2.5rem !important;
    text-align: center !important;
  }

  #features h3 {
    width: 300px;
    font-size: 1rem;
  }

  .features {
    grid-template-columns: 1fr;
    padding: 5vh 0;
  }

  .feature p {
    font-size: .9rem;
    max-width: 300px;
  }
}

/*
  Third slide
 */

#team ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

#team li {
  display: inline-block;
  font-size: .9rem;
  padding: .5rem;
  margin: 5vh 0;
}

#team li.login {
  border-radius: 1.5em;
  padding: .5rem 1rem;
}

.selectedTeam {
  background-color: #3772ff;
  border-color: #3772ff;
  color: white !important;
  border-radius: 1.5em;
  padding: .5rem 1rem;
}

.team {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  width: 90%;
  margin-top: 3vh;
}

.hidden {
  display: none;
}

.visible {
  display: grid;
}

.member img {
  height: 200px;
  border-radius: 10px;
  transition: box-shadow .2s;
}

.member img:hover {
  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
}

.member h4 {
  margin: 1rem 0 0 0;
}

.member h5 {
  color: var(--gray);
  margin: 1rem 0;
}

@media screen and (max-width: 1200px) {
  .team {
    width: 100%;
    display: flex;
    overflow-x: scroll;
  }

  .member:first-child {
    margin-left: 25vw;
  }

  .member:last-child {
    margin-right: 25vw;
  }

  .member {
    margin: 0 5vw;
  }
}

/*
  Plan slide
 */

#plan {
  flex-direction: row;
  justify-content: space-between;
}

#plan img {
  max-height: 90vh;
  transform: translateY(10vh);
}

#plan h2 {
  font-size: 4rem;
  text-align: left;
  max-width: 600px;
  margin-bottom: 2rem;
}

@media screen and (max-width: 1200px) {
  #plan {
    flex-direction: column;
    justify-content: center;
    min-height: 50vh;
  }

  #plan > div {
    align-items: center;
    flex-grow: 0;
    margin-bottom: 2rem;
  }

  #plan img {
    display: none;
  }
}

/*
  Contact slide
 */

#contact form {
  background-color: #fff;
  border-radius: 20px;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
  display: flex;
  margin: 3rem;
  text-align: left;
}

#contact img {
  height: 2rem;
}

#contact h3 {
  color: var(--gray);
  font-weight: normal;
}

#contact p {
  margin: 0;
}

#contact form > div:first-child {
  margin: 10vh 10vw;
}

#contact form > div:last-child {
  margin: 10vh 10vw 10vh 0;
}

#contact hr {
  display: none;
}

.inputField {
  display: flex;
  flex-direction: column;
}

.inputField label {
  color: var(--gray);
  font-weight: bold;
  font-size: .8rem;
  text-transform: uppercase;
  margin: .5rem 0;
}

.inputField input, .inputField textarea {
  background-color: #eee;
  border: none;
  border-radius: 20px;
  font-family: "Inter", sans-serif;
  font-size: .9rem;
  padding: 1rem;
  resize: none;
  width: 300px;
  transition: background-color .3s;
}

.inputField input:focus, .inputField textarea:focus {
  outline: none;
  background-color: #ddd;
}

@media screen and (max-width: 800px) {
  #contact form {
    flex-direction: column;
  }

  #contact form > div:first-child {
    margin: 2rem 10vw;
  }

  #contact hr {
    display: block;
    width: calc(100% - 20vw);
  }

  #contact form > div:last-child {
    margin: 2rem 10vw;
  }

  #contact .button {
    margin: 1rem 0 0 0;
  }

  .inputField {
    margin-bottom: 1rem;
  }

  .inputField input, .inputField textarea {
    width: 50vw;
  }
}

